tests/errors/semantic/blocking/TUPLE_WITH_INCOHERENT_RANKS.py
# pylint: disable=missing-function-docstring, missing-module-docstring
if __name__ == "__main__":
    a = (1, [1, 2, 3])
